EMS: Various code improvements. Endpoint improvements in several controllers (removed POST method from query-only endpoints). Changed spring.factories to 'META-INF/spring/org.springframework.boot.autoconfigure.AutoConfiguration.imports' in 'common' module.