@@ -75,7 +75,7 @@ public class TestCallback extends AbstractLogBase implements BrokerUtil.NodeCall
     }
 
     public String getConfiguration(Member local) {
-        return String.format("ssl://%s:61617", local.address().host());
+        return "ssl://%s:61617".formatted(local.address().host());
     }
 
     public void setConfiguration(String newConfig) {
